--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -170,6 +170,7 @@
     <string name="category_police_string">police force</string>
     <string name="category_political_organization_title">Political Organization</string>
     <string name="category_political_organization_string">political organization</string>
+    <string name="category_political_military_organization_title">Political &amp; Military Organization</string>
     <string name="category_political_military_organization_string">political and military organization</string>
     <string name="category_university_title">University</string>
     <string name="category_university_string">university</string>
